fix bold tags on dark mode

--- a/styles/global.css
+++ b/styles/global.css
@@ -42,6 +42,9 @@
 .dark .prose {
     color: theme('colors.gray.300')
 }
+.dark .prose strong {
+    color: theme('colors.gray.200');
+}
 
 code, .prose code {
   color: var(--inline-code-color);
